--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body{
 
 @media screen and (max-width: 767px){
     .question{
-        font-size: 60px;  
+        font-size: 60px; 
+        margin-bottom: 25px; 
     }
 }
 
@@ -24,4 +25,72 @@ body{
     .question {
             font-size: 200px;
         }
+} 
+
+@media screen and (max-width: 767px){
+    .ans{
+       
+        width: 50px;
+        height: 50px;
+        margin: auto;
+        margin-bottom: 25px;
+        font-size: 30px;
+        
+        
+        
+    }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1599px){
+    .ans{
+       
+        width: 70px;
+        height: 70px;
+        font-size: 40px;
+        margin-left: 25px;
+        margin-bottom: 25px;
+        
+    }
+}
+
+.ans{
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+}
+
+@media screen and (min-width: 1600px){
+    .ans{
+        width: 100px;
+        height: 100px;
+        font-size: 60px;
+    }
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 1599px){
+    .ans-block{
+        display: flex;
+        flex-wrap: wrap;
+        width: 300px;
+        justify-content: center;
+        margin: auto;
+    }
+
+    .no-margin{
+        margin-left: 0;
+    }
+}
+
+@media screen and (min-width: 1600px){
+    .ans-block{
+        display: flex;
+        width: 700px;
+        justify-content: space-between;
+        align-items: center;
+        margin: auto;
+    }
+}
+
